comentarios + color en tab

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -31,7 +31,7 @@
     </div>
   
     <!-- Loader -->
-    <div class="loader" *ngIf="isLoading">
+    <div class="loader" *ngIf="isLoading" style="margin-top: 7vh;">
       <div class="wrapper">
         <div class="text">LOADING</div>
         <div class="box"></div>
