--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="tab1" href="/tabs/tab1" [class.tab-active]="selectedTab === 'tab1'" [class.tab-inactive]="selectedTab !== 'tab1'" (click)="changeTab('tab1')">
       <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="tab2" href="/tabs/tab2" [class.tab-active]="selectedTab === 'tab2'" [class.tab-inactive]="selectedTab !== 'tab2'" (click)="changeTab('tab2')">
       <ion-icon aria-hidden="true" name="calendar-number-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="tab3" href="/tabs/tab3" [class.tab-active]="selectedTab === 'tab3'" [class.tab-inactive]="selectedTab !== 'tab3'" (click)="changeTab('tab3')">
       <ion-icon aria-hidden="true" name="chatbubbles-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4" href="/tabs/tab4">
+    <ion-tab-button tab="tab4" href="/tabs/tab4" [class.tab-active]="selectedTab === 'tab4'" [class.tab-inactive]="selectedTab !== 'tab4'" (click)="changeTab('tab4')">
       <ion-icon aria-hidden="true" name="logo-instagram"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
