--- a/src/app/event-form/event-form.page.html
+++ b/src/app/event-form/event-form.page.html
@@ -15,7 +15,7 @@
 
   <ion-item>
     <ion-label position="stacked">Descripción</ion-label>
-    <ion-textarea [(ngModel)]="descripcion"></ion-textarea>
+    <ion-input type="text" [(ngModel)]="descripcion"></ion-input>
   </ion-item>
 
   <ion-item>
