--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -97,3 +97,15 @@ ion-item {
   display: flex; /* Usamos flexbox */
   justify-content: center; /* Centramos horizontalmente */
 }
+
+ion-fab {
+    position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
+    width: 56px; /* Ancho del botón */
+    height: 56px; /* Altura del botón */
+    border-radius: 50%; /* Hace que el botón sea redondo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
