--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -106,3 +106,15 @@ ion-item {
     justify-content: center;
     /* Centramos horizontalmente */
 }
+
+ion-fab {
+    position: fixed;
+    bottom: 1.5rem;
+    left: 1.5rem;
+    width: 56px; /* Ancho del botón */
+    height: 56px; /* Altura del botón */
+    border-radius: 50%; /* Hace que el botón sea redondo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
