--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,95 +1,86 @@
 <ion-content [fullscreen]="true">
-  <div class="circle-background"></div>
-  <ion-fab vertical="top" horizontal="end">
-    <ion-fab-button>
-      <ion-icon name="calendar"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <div class="circle-background1" *ngIf="segmentValue === 'eventos'"></div>
 
-  <div class="first-heading"></div>
-  <ion-card class="main-card" *ngFor="let fechaDestacada of highlightedDates; let i = index">
-    <ion-card-content [class.expanded]="tarjetaSeleccionada === i" (click)="seleccionarTarjeta(i)"
-      *ngIf="esFechaIgualOPosterior(fechaDestacada.date)">
-      <div class="card-container">
-        <div class="card">
-          <div class="card-content">
-            <h1>{{ formatDate(fechaDestacada.date) }}</h1>
-          </div>
-        </div>
-      </div>
-    </ion-card-content>
+  <div class="circle-background2" *ngIf="segmentValue === 'calendario'"></div>
 
-    <!-- Contenido de la tarjeta expandible -->
-    <ion-card *ngIf="tarjetaSeleccionada === i" class="expanded-card">
-      <ion-card-content>
+  <ion-segment [(ngModel)]="segmentValue">
+    <ion-segment-button value="eventos">
+      <ion-label>Eventos</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="calendario">
+      <ion-label>Calendario</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <!-- Contenido para Eventos -->
+  <div *ngIf="segmentValue === 'eventos'">
+    <ion-card class="main-card" *ngFor="let fechaDestacada of highlightedDates; let i = index">
+      <!-- Contenido de las tarjetas de eventos -->
+      <ion-card-content [class.expanded]="tarjetaSeleccionada === i" (click)="seleccionarTarjeta(i)"
+        *ngIf="esFechaIgualOPosterior(fechaDestacada.date)">
         <div class="card-container">
           <div class="card">
             <div class="card-content">
-              <!-- Iterar sobre los eventos de la fecha seleccionada que son igual o superior a la fecha actual -->
-              <ion-list>
-                <ion-item *ngFor="let evento of fechaDestacada.eventos">
-                  <ion-label>
-                    <h2>{{ evento.titulo }}</h2>
-                    <p>{{ evento.descripcion }}</p>
-                  </ion-label>
-                </ion-item>
-              </ion-list>
+              <h1>{{ formatDate(fechaDestacada.date) }}</h1>
             </div>
           </div>
         </div>
       </ion-card-content>
+
+      <!-- Contenido de las tarjetas expandibles -->
+      <ion-card *ngIf="tarjetaSeleccionada === i" class="expanded-card">
+        <ion-card-content>
+          <div class="card-container">
+            <div class="card">
+              <div class="card-content">
+                <!-- Iterar sobre los eventos de la fecha seleccionada que son igual o superior a la fecha actual -->
+                <ion-list>
+                  <ion-item *ngFor="let evento of fechaDestacada.eventos">
+                    <ion-label>
+                      <h2>{{ evento.titulo }}</h2>
+                      <p>{{ evento.descripcion }}</p>
+                    </ion-label>
+                  </ion-item>
+                </ion-list>
+              </div>
+            </div>
+          </div>
+        </ion-card-content>
+      </ion-card>
     </ion-card>
-  </ion-card>
+  </div>
+
+  <!-- Contenido para Calendario -->
+  <div *ngIf="segmentValue === 'calendario'">
+    <div class="calendar-container">
+      <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada" presentation="date"
+        [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()"></ion-datetime>
+    </div>
 
 
+    <ion-card *ngIf="fechaDestacadaSeleccionada" class="full-width-card">
+      <!-- Contenido que estaba en el modal -->
+      <ion-card-header>
+        <ion-card-title>{{ fechaDestacadaSeleccionada.date }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content class="full-width-content">
+        <ion-list>
+          <ion-item *ngFor="let evento of fechaDestacadaSeleccionada.eventos">
+            <ion-label>
+              <h2>{{ evento.titulo }}</h2>
+              <p>{{ evento.descripcion }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
 
-  <ion-fab vertical="top" horizontal="end">
-    <ion-button id="open-modal" expand="block">
-      <ion-icon name="calendar"></ion-icon>
-    </ion-button>
-  </ion-fab>
-
-  <ion-modal #modal trigger="open-modal">
-    <ng-template>
-      <ion-content>
-        <ion-toolbar>
-          <ion-title>Modal</ion-title>
-          <ion-buttons slot="start">
-            <ion-button (click)="closeModal()">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-
-        <div class="modal-content" (click)="onModalContentClick($event)">
-          <ion-datetime #calendario displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada" presentation="date"
-            [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()"></ion-datetime>
-
-          <ion-card *ngIf="fechaDestacadaSeleccionada" class="full-width-card">
-            <ion-card-header>
-              <ion-card-title>{{ fechaDestacadaSeleccionada.date }}</ion-card-title>
-            </ion-card-header>
-            <ion-card-content class="full-width-content">
-              <ion-list>
-                <ion-item *ngFor="let evento of fechaDestacadaSeleccionada.eventos">
-                  <ion-label>
-                    <h2>{{ evento.titulo }}</h2>
-                    <p>{{ evento.descripcion }}</p>
-                  </ion-label>
-                </ion-item>
-              </ion-list>
-            </ion-card-content>
-          </ion-card>
-
-          <!-- Botón dentro de una fila para que esté debajo de la tarjeta -->
-          <ion-row class="centered-row">
-            <ion-fab-button>
-              <ion-icon name="add-circle-outline" (click)="closeModal()" routerLink="/event-form"></ion-icon>
-            </ion-fab-button>
-          </ion-row>
-        </div>
-
-      </ion-content>
-    </ng-template>
-  </ion-modal>
-
+    <!-- Botón para añadir evento -->
+    <ion-row class="centered-row">
+      <ion-fab-button (click)="agregarEvento()" routerLink="/event-form">
+        <ion-icon name="add-circle-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-row>
+  </div>
 
 </ion-content>
