--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,49 +1,45 @@
-.circle-background {
+.circle-background2 {
   width: 550px;
   height: 550px;
   border-radius: 50%;
   background-color: #fa8f42;
   position: absolute;
-  top: 35%;
-  left: -275px;
+  top: 5%;
+  left: -235px;
   transform: translate(0%, -50%);
   overflow: hidden;
   z-index: -1;
-  /* Aquí establecemos el z-index en un valor menor */
+}
+
+.circle-background1 {
+  width: 550px;
+  height: 550px;
+  border-radius: 50%;
+  background-color: #fa8f42;
+  position: absolute;
+  top: 5%;
+  right: -235px;
+  transform: translate(0%, -50%);
+  overflow: hidden;
+  z-index: -1;
+}
+
+ion-segment {
+  margin-top: 15vh;
+  background-color: #fa8f42;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #000;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 ion-fab {
   position: absolute;
   top: 3rem;
-  /* Ajusta según sea necesario */
   right: 3rem;
-  /* Ajusta según sea necesario */
 }
-
-.custom-modal-css {
-  --min-height: fit-content;
-  --height: fit-content;  // Ajustar según el contenido
-  --max-height: 65%;  // Ajustar según necesidad y diseño
-  --min-width: fit-content;
-  --width: 100%;  // O un porcentaje que se adapte mejor al diseño
-  --max-width: 100%;  // Esto garantiza que el modal se expanda horizontalmente
-
-  // Asegúrate de que la altura no es demasiado grande para pequeños contenidos
-  height: fit-content;
-  max-height: 65vh;  // Ajustar según necesidad y diseño
-}
-
-
-.modal-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-
-
 
 .full-width-card {
   margin-top: 20px;
@@ -56,7 +52,7 @@ ion-fab {
 }
 
 ion-card {
-  box-shadow: 0 2px 5px rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12);
 }
 
 ion-card-header {
@@ -67,33 +63,8 @@ ion-list {
   margin-top: 10px;
 }
 
-
 .main-card {
   background-color: #d9d9d9;
-
-  .card-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card {
-    width: 100%;
-    border-radius: 10px;
-  }
-
-  .card-content {
-    align-items: center;
-    width: 90%;
-
-  }
-
-  h1 {
-    font-size: 24px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-  }
 }
 
 .first-heading {
@@ -110,6 +81,13 @@ ion-content[fullscreen="true"] {
   }
 }
 
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+}
+
 h2 {
   font-size: 20px;
   font-weight: bold;
@@ -122,3 +100,10 @@ h2 {
   display: flex;
   justify-content: center;
 }
+
+.calendar-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 8vh;
+}
+
