--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,99 +1,43 @@
 <ion-content [fullscreen]="true">
-  <div class="circle-background1" *ngIf="segmentValue === 'avisos'"></div>
+  <div class="circle-background"></div>
 
-  <div class="circle-background2" *ngIf="segmentValue === 'foro'"></div>
-
-  <ion-segment [(ngModel)]="segmentValue">
-    <ion-segment-button value="avisos">
-      <ion-label>Avisos</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="foro">
-      <ion-label>Foro</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-
-  <ion-fab vertical="bottom" horizontal="start" *ngIf="segmentValue === 'avisos'" class="btnPlusAvisos">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-
-  <ion-fab vertical="bottom" horizontal="end" *ngIf="segmentValue === 'foro'" class="btnPlusForo">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-
-  <!-- <app-cabecera [primeraLinea]="primeraLinea" [primeraPalabra]="primeraPalabra" [segundaLinea]="segundaLinea"
-    [segundaPalabra]="segundaPalabra"></app-cabecera>
-    
-  <ion-segment [(ngModel)]="segmentValue">
-    <ion-segment-button value="avisos">
-      <ion-label>Avisos</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="foro">
-      <ion-label>Foro</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-
-  <ion-list *ngIf="segmentValue === 'avisos'">
-    <ion-card (click)="toggleShowInfo()">
-      <ion-card-header>
-        <ion-card-title>Evento 1</ion-card-title>
-      </ion-card-header>
-      <ion-card-content *ngIf="showInfo">
-        <ion-label class="labelChat">Fecha</ion-label>
-        <p>Informacion del evento 1. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Totam fugit assumenda odit, voluptate blanditiis vitae! Amet doloremque ullam voluptatum
-          quam, esse obcaecati repellat tenetur nesciunt, odio explicabo saepe autem. Illum?</p>
+  <!-- Tarjeta principal con el título como el título del aviso -->
+  <ion-card *ngFor="let aviso of avisosFalla; let i = index" (click)="seleccionarTarjeta(i)">
+    <ion-card-content [class.expanded]="tarjetaSeleccionada === i">
+      <div class="card-container">
+        <div class="card">
+          <div class="card-content">
+            <!-- Muestra el título del aviso -->
+            <h1>{{ aviso.titulo }}</h1>
+          </div>
+        </div>
+      </div>
+    </ion-card-content>
+  
+    <!-- Contenido de la tarjeta expandible, mostrando solo la descripción y opcionalmente la imagen si está disponible -->
+    <ion-card *ngIf="tarjetaSeleccionada === i" class="expanded-card">
+      <ion-card-content>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-content">
+              <ion-list>
+                <ion-item>
+                  <ion-label>
+                    <h2>{{ aviso.descripcion }}</h2>
+                    <!-- Muestra la imagen solo si hay una y no está vacía -->
+                    <img *ngIf="aviso.img && aviso.img !== '.' && aviso.img.trim() !== ''" [src]="aviso.img" />
+                  </ion-label>
+                </ion-item>
+              </ion-list>
+            </div>
+          </div>
+        </div>
       </ion-card-content>
     </ion-card>
+  </ion-card>
 
-    <ion-accordion-group>
-      <ion-accordion value="first" toggleIconSlot="start">
-        <ion-item slot="header">
-          <ion-label>Evento 1</ion-label>
-          <ion-label>Fecha</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">Informacion del evento 1. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Totam fugit assumenda odit, voluptate blanditiis vitae! Amet doloremque ullam voluptatum
-          quam, esse obcaecati repellat tenetur nesciunt, odio explicabo saepe autem. Illum?</div>
-      </ion-accordion>
-      <ion-accordion value="second" toggleIconSlot="start">
-        <ion-item slot="header">
-          <ion-label>Evento 2</ion-label>
-          <ion-label>Fecha</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">Informacion del evento 2. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Totam fugit assumenda odit, voluptate blanditiis vitae! Amet doloremque ullam voluptatum
-          quam, esse obcaecati repellat tenetur nesciunt, odio explicabo saepe autem. Illum?</div>
-      </ion-accordion>
-      <ion-accordion value="third" toggleIconSlot="start">
-        <ion-item slot="header">
-          <ion-label>Evento 3</ion-label>
-          <ion-label>Fecha</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">Informacion del evento 3. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Totam fugit assumenda odit, voluptate blanditiis vitae! Amet doloremque ullam voluptatum
-          quam, esse obcaecati repellat tenetur nesciunt, odio explicabo saepe autem. Illum?</div>
-      </ion-accordion>
-    </ion-accordion-group>
-  </ion-list>
 
-  <ion-list *ngIf="segmentValue === 'foro'">
-    <ion-card>
-      <ion-label>He encontrado un gorro naranja, es de alguien?</ion-label>
-    </ion-card>
-    <ion-card>
-      <ion-label>Mi hijo a perdido un gorro naranja</ion-label>
-    </ion-card>
 
-  </ion-list>
-
-  <ion-fab vertical="bottom" horizontal="end" *ngIf="segmentValue === 'foro'">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab> -->
+  
 
 </ion-content>
