--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,108 +1,35 @@
-.circle-background2 {
-    width: 550px;
-    height: 550px;
-    border-radius: 50%;
-    background-color: #fa8f42;
-    position: absolute;
-    top: 5%;
-    left: -235px;
-    transform: translate(0%, -50%);
-    overflow: hidden;
-    z-index: -1;
+.circle-background {
+  width: 550px;
+  height: 550px;
+  border-radius: 50%;
+  background-color: #fa8f42;
+  position: absolute;
+  top: 35%;
+  left: -275px;
+  transform: translate(0%, -50%);
+  overflow: hidden;
+  z-index: -1;
 }
 
-.circle-background1 {
-    width: 550px;
-    height: 550px;
-    border-radius: 50%;
-    background-color: #fa8f42;
-    position: absolute;
-    top: 5%;
-    right: -235px;
-    transform: translate(0%, -50%);
-    overflow: hidden;
-    z-index: -1;
+.main-card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  transition: box-shadow 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  ion-card-content {
+    padding: 20px;
+  }
+  h1 {
+    color: #000 !important;
+  font-weight: bold !important;
+  text-align: center !important;
+  }
+
+  h2 {
+    color: #333; // Color gris ya establecido
+  }
 }
-
-ion-segment {
-    margin-top: 15vh;
-    background-color: #fa8f42;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid #000; /* Añade un borde de 2 píxeles sólido de color negro */
-    border-radius: 10px; /* Añade bordes redondeados */
-    box-sizing: border-box; /* Incluye el borde en el ancho total */
-}
-
-ion-fab {
-    position: fixed;
-    bottom: 1.5rem;
-}
-
-.btnPlusAvisos{
-    left: 1.5rem;
-}
-
-.btnPlusForo{
-    right: 1.5rem;
-}
-
-
-
-
-/* 
-
-ion-accordion {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    min-height: 3.5rem;
-    width: calc(100% - 3rem);
-
-}
-
-ion-accordion.accordion-expanding,
-ion-accordion.accordion-expanded {
-    width: calc(100% - 4rem);
-    margin: 16px auto;
-}
-
-ion-accordion.accordion-collapsing ion-item[slot='header'],
-ion-accordion.accordion-collapsed ion-item[slot='header'] {
-    --background: var(--ion-color-light);
-    --color: var(--ion-color-light-contrast);
-}
-
-ion-accordion.accordion-expanding ion-item[slot='header'],
-ion-accordion.accordion-expanded ion-item[slot='header'] {
-    --background: var(--ion-color-primary);
-    --color: var(--ion-color-primary-contrast);
-}
-
-
-
-ion-fab {
-    position: fixed;
-    bottom: 1.5rem;
-    right: 1.5rem;
-}
-
-ion-card {
-    margin-bottom: 1.25rem;
-    padding: 1.25rem;
-    border-radius: 0.625rem;
-    background-color: #ffffff;
-    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
-}
-
-ion-label {
-    font-size: 1rem;
-}
-
-
-.labelChat {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-} */
