--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -4,7 +4,7 @@
       <ion-back-button defaultHref="/tabs/tab1"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
-  
+
 
   <div class="imagen-redonda">
     <img src="../../assets/images/placeholder.PNG" alt="" style="border-radius: 20vh;">
@@ -14,10 +14,9 @@
     <h1>Jesús García</h1>
   </div>
 
-  <ion-fab vertical="bottom" horizontal="end" >
+  <ion-fab vertical="bottom" horizontal="end">
     <ion-fab-button (click)="onClick()">
-      <ion-icon name="options-outline"></ion-icon>
-    </ion-fab-button>
+      <ion-icon name="log-out-outline"></ion-icon> </ion-fab-button>
   </ion-fab>
 
 </ion-content>
