--- a/src/app/event-form/event-form.page.html
+++ b/src/app/event-form/event-form.page.html
@@ -24,5 +24,5 @@
       presentation="date"></ion-datetime>
   </ion-item>
 
-  <ion-button expand="full" (click)="guardarEvento()">Guardar</ion-button>
+  <ion-button expand="full" (click)="guardarEvento()" routerLink="/tabs/tab2">Guardar</ion-button>
 </ion-content>
