--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -77,10 +77,61 @@
 
     <!-- Botón para añadir evento -->
     <ion-row class="centered-row">
-      <ion-fab-button (click)="agregarEvento()" routerLink="/event-form">
+      <ion-fab-button id="open-modal" expand="block">
         <ion-icon name="add-circle-outline"></ion-icon>
       </ion-fab-button>
+      <!-- <ion-fab-button (click)="agregarEvento()" routerLink="/event-form">
+        <ion-icon name="add-circle-outline"></ion-icon>
+      </ion-fab-button> -->
     </ion-row>
+
+    <ion-modal trigger="open-modal" [initialBreakpoint]="1" [breakpoints]="[0, 1]">
+      <ng-template>
+        <div class="block">
+
+          <ion-button class="newEvent" (click)="agregarEvento()" routerLink="/event-form">Event nou</ion-button>
+
+          <ion-list *ngFor="let fechaDestacada of highlightedDates">
+            <!-- Contenido de las tarjetas de eventos -->
+            <ion-item class="custom-item" *ngIf="esFechaIgualOPosterior(fechaDestacada.date)">
+              <div class="card-container2">
+                <div class="card-content2">
+                  <ion-row>
+                    <!-- Columna para la fecha y el título -->
+                    <ion-col size="9">
+                      <h1 class="dateEdit">{{ formatDate(fechaDestacada.date) }}</h1>
+                      <!-- Iterar sobre los eventos de la fecha seleccionada que son igual o superior a la fecha actual -->
+                      <ion-list>
+                        <ion-item class="event-item2" *ngFor="let evento of fechaDestacada.eventos">
+                          <ion-label>
+                            <h2>{{ evento.titulo }}</h2>
+                          </ion-label>
+                        </ion-item>
+                      </ion-list>
+                    </ion-col>
+                    <!-- Columna para el botón -->
+                    <ion-col size="3">
+                      <ion-button  class="action-button">Actuar</ion-button>
+                      <!--<ion-button (click)="actuarSobreEvento(evento)" class="action-button">Actuar</ion-button>-->
+                    </ion-col>
+                  </ion-row>
+                </div>
+              </div>
+            </ion-item>
+          </ion-list>
+
+
+
+
+
+
+        </div>
+      </ng-template>
+    </ion-modal>
+
+
   </div>
+
+
 
 </ion-content>
