--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -107,3 +107,63 @@ h2 {
   margin-top: 8vh;
 }
 
+.block {
+  width: 100%;
+  height: 800px;
+  justify-content: center;
+}
+
+ion-modal {
+  --height: auto;
+}
+
+.newEvent {
+  margin-top: 60px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3vh;
+  width: 80%;
+  border-radius: 10px;
+  box-sizing: border-box;
+  --background: #fa8f42; // Color de fondo del botón
+  --color: #fff; // Color del texto del botón
+}
+
+.custom-item {
+  border-bottom: 1px solid #ccc; // Línea divisoria entre elementos
+}
+
+.card-container2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column; // Contenido en columna
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+}
+
+.card-content2 {
+  flex: 1; // El contenido ocupa todo el espacio disponible
+}
+
+.dateEdit {
+  margin-bottom: 5px; // Espacio entre la fecha y el título
+  text-align: start; // Centra el texto
+}
+
+.button-container {
+  margin-top: 10px; // Espacio entre el contenido y el botón
+  text-align: right; // Alinea el botón a la derecha
+}
+
+.action-button {
+  --background: #fa8f42; // Color de fondo del botón
+  --color: #fff; // Color del texto del botón
+  --border-radius: 20px; // Radio de borde del botón
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: end;
+  align-items: end;
+}
