muestra todos los eventos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -93,7 +93,7 @@
 
           <ion-list *ngFor="let nuevoEvento of highlightedDates">
             <!-- Contenido de las tarjetas de eventos -->
-            <ion-item class="custom-item" *ngIf="esFechaIgualOPosterior(nuevoEvento.date)">
+            <ion-item class="custom-item">
               <div class="card-container2">
                 <div class="card-content2">
                   <ion-row>
