--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -1,17 +1,24 @@
 .imagen-redonda {
-    width: 200px; /* Ajusta el tamaño según sea necesario */
-    height: 200px; /* Ajusta el tamaño según sea necesario */
-    overflow: hidden; /* Esto ocultará cualquier parte de la imagen que se salga del contenedor */
-    border-radius: 50%; /* Esto redondeará la imagen */
+    width: 200px;
+    /* Ajusta el tamaño según sea necesario */
+    height: 200px;
+    /* Ajusta el tamaño según sea necesario */
+    overflow: hidden;
+    /* Esto ocultará cualquier parte de la imagen que se salga del contenedor */
+    border-radius: 50%;
+    /* Esto redondeará la imagen */
     margin-left: auto;
     margin-right: auto;
     margin-top: 3vh;
 }
 
 .imagen-redonda img {
-    width: 100%; /* Asegúrate de que la imagen ocupe todo el contenedor */
-    height: auto; /* La altura se ajustará automáticamente para mantener la proporción */
-    display: block; /* Para evitar espacios en blanco debajo de la imagen */
+    width: 100%;
+    /* Asegúrate de que la imagen ocupe todo el contenedor */
+    height: auto;
+    /* La altura se ajustará automáticamente para mantener la proporción */
+    display: block;
+    /* Para evitar espacios en blanco debajo de la imagen */
 }
 
 
@@ -24,12 +31,26 @@ ion-fab {
     position: fixed;
     bottom: 1.5rem;
     right: 1.5rem;
-    width: 56px; /* Ancho del botón */
-    height: 56px; /* Altura del botón */
-    border-radius: 50%; /* Hace que el botón sea redondo */
+    width: 56px;
+    /* Ancho del botón */
+    height: 56px;
+    /* Altura del botón */
+    border-radius: 50%;
+    /* Hace que el botón sea redondo */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 
+.block {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ion-modal {
+    --height: auto;
+}
