añadido estilos antiguos comentados

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,3 +1,15 @@
+/* .tab-active {
+  color: #ff6a00; 
+}
+
+.tab-inactive {
+  color: #000000; 
+}
+
+ion-tab-bar {
+  background-color: #ffffff; 
+} */
+
 // Estilo para la pestaña activa
 .tab-active {
   color: #ff6a00; // Cambia al color deseado
