avisos de la base de datos

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -121,7 +121,7 @@ ion-modal {
   overflow-y: auto;
 }
 
-.newEvent {
+.newEvent, .newNoti {
   margin-top: 60px;
   display: flex;
   margin-left: auto;
