--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -89,8 +89,17 @@
       <ng-template>
         <div class="block">
 
-          <ion-button class="newEvent" (click)="agregarEvento(); closeModal()" routerLink="/event-form">Event
-            nou</ion-button>
+          <ion-row>
+            <ion-col>
+              <ion-button class="newEvent" (click)="agregarEvento(); closeModal()" routerLink="/event-form">Event
+                nou</ion-button>
+            </ion-col>
+            <ion-col>
+              <ion-button class="newNoti" (click)="closeModal()">Avis nou</ion-button>
+            </ion-col>
+          </ion-row>
+
+
 
           <ion-list *ngFor="let nuevoEvento of highlightedDates">
             <!-- Contenido de las tarjetas de eventos -->
