--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,7 +75,7 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  --ion-background-color: #c9c9c9; /* Cambia #f4f4f4 al color que prefieras */
+  --ion-background-color: #efefef; /* Cambia #f4f4f4 al color que prefieras */
 }
 
 @media (prefers-color-scheme: light) {
