--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -21,6 +21,9 @@
     /* Para evitar espacios en blanco debajo de la imagen */
 }
 
+.btnNoti{
+    margin-top: 5vh;
+}
 
 .nombreUsuario {
     text-align: center;
