--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,60 +15,50 @@
   <!-- Contenido para Eventos -->
   <div *ngIf="segmentValue === 'eventos'">
     <ion-card class="main-card" *ngFor="let fechaDestacada of highlightedDates; let i = index">
-      <!-- Contenido de las tarjetas de eventos -->
-      <ion-card-content [class.expanded]="tarjetaSeleccionada === i" (click)="seleccionarTarjeta(i)" 
+      <ion-card-content [class.expanded]="tarjetaSeleccionada === i" (click)="seleccionarTarjeta(i)"
         *ngIf="esFechaIgualOPosterior(fechaDestacada.date)">
         <div class="card-container">
-          <div class="card">
-            <div class="card-content">
-              <h1>{{ formatDate(fechaDestacada.date) }}</h1>
-            </div>
-          </div>
+          <h1>{{ formatDate(fechaDestacada.date) }} - {{ fechaDestacada.eventos[0].titulo }}</h1>
+          <!-- Muestra el título del primer evento o el más destacado -->
+          <!-- <h2 *ngIf="fechaDestacada.eventos.length > 0">{{ fechaDestacada.eventos[0].titulo }}</h2> -->
         </div>
       </ion-card-content>
-
+    
       <!-- Contenido de las tarjetas expandibles -->
-      <ion-card *ngIf="tarjetaSeleccionada === i" class="expanded-card"> 
-        <ion-card-content class="card-dentro">
-          <div class="card-container">
-            <div class="card">
-              <div class="card-content">
-                <!-- Iterar sobre los eventos de la fecha seleccionada que son igual o superior a la fecha actual -->
-                <ion-list>
-                  <ion-item *ngFor="let evento of fechaDestacada.eventos" style="background-color: aqua;">
-                    <ion-label>
-                      <h2>{{ evento.titulo }}</h2>
-                      <p>{{ evento.descripcion }}</p>
-                    </ion-label>
-                  </ion-item>
-                </ion-list>
-              </div>
-            </div>
-          </div>
-        </ion-card-content>
-      </ion-card>
+      <ion-card-content *ngIf="tarjetaSeleccionada === i" class="expanded-card">
+        <ion-list>
+          <ion-item *ngFor="let evento of fechaDestacada.eventos" class="event-item">
+            <ion-label>
+              <h2>{{ evento.titulo }}</h2>
+              <p>{{ evento.descripcion }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
     </ion-card>
+
+
   </div>
 
   <!-- Contenido para Calendario -->
   <div *ngIf="segmentValue === 'calendario'">
     <div class="calendar-container">
       <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="fechaSeleccionada" presentation="date"
-        [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()"></ion-datetime>
+        [highlightedDates]="highlightedDates" (ionChange)="mostrarInformacionMejorada()" class="custom-datetime" ></ion-datetime>
     </div>
 
 
     <ion-card *ngIf="fechaDestacadaSeleccionada" class="full-width-card">
       <!-- Contenido que estaba en el modal -->
       <ion-card-header>
-        <ion-card-title>{{ fechaDestacadaSeleccionada.date }}</ion-card-title>
+        <ion-card-title>{{ formatDate(fechaDestacadaSeleccionada.date) }}</ion-card-title>
       </ion-card-header>
       <ion-card-content class="full-width-content">
         <ion-list>
           <ion-item *ngFor="let evento of fechaDestacadaSeleccionada.eventos">
             <ion-label>
-              <h2>{{ evento.titulo }}</h2>
-              <p>{{ evento.descripcion }}</p>
+              <h1>{{ evento.titulo }}</h1>
+              <h2>{{ evento.descripcion }}</h2>
             </ion-label>
           </ion-item>
         </ion-list>
